--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 asttokens==3.0.0
 decorator==5.2.1
 Django==4.2.20
+django-debug-toolbar==5.1.0
 django-extensions==4.1
 exceptiongroup==1.2.2
 executing==2.2.0
@@ -10,6 +11,7 @@ jedi==0.19.2
 matplotlib-inline==0.1.7
 parso==0.8.4
 pexpect==4.9.0
+pillow==11.2.1
 prompt_toolkit==3.0.50
 ptyprocess==0.7.0
 pure_eval==0.2.3
