--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,8 @@ stack-data==0.6.3
 traitlets==5.14.3
 typing_extensions==4.13.2
 wcwidth==0.2.13
-celery
-redis
+celery==5.3.6
+redis==5.0.1
 django-celery-beat
 django-environ==0.11.2
+psycopg2-binary==2.9.9
