--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,6 @@ typing_extensions==4.13.2
 wcwidth==0.2.13
 celery==5.3.6
 redis==5.0.1
-django-celery-beat
+django-celery-beat==2.8.0
 django-environ==0.11.2
 psycopg2-binary==2.9.9
