admin script was added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   web:
     build: .
-    command: python project/manage.py runserver 0.0.0.0:8000
+    command: /bin/sh -c "python /app/project/manage.py create_admin && python /app/project/manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
     ports:
@@ -17,7 +17,13 @@ services:
 
   seed:
     build: .
-    command: /bin/sh -c "python /app/project/manage.py migrate && python /app/project/manage.py seed_data"
+    command: >
+      /bin/sh -c "
+      python /app/project/manage.py migrate &&
+      python /app/project/manage.py seed_data &&
+      python /app/project/manage.py create_admin &&
+      python /app/project/manage.py runserver 0.0.0.0:8000
+      "
     volumes:
       - .:/app
     env_file:
