1) celery-beat schedule adding command created, 2) this command runs during contrainer start, 3) old schedule files were deleted, 4) fixtures dropped

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     command: >
       /bin/sh -c "
       python /app/project/manage.py migrate &&
+      python /app/project/manage.py register_periodic_tasks &&
       python /app/project/manage.py create_admin && 
       python /app/project/manage.py runserver 0.0.0.0:8000
       "
