--- a/requirements.txt
+++ b/requirements.txt
@@ -25,4 +25,5 @@ celery==5.3.6
 redis==5.0.1
 django-celery-beat==2.8.0
 django-environ==0.11.2
+djangorestframework==3.16.0
 psycopg2-binary==2.9.9
