--- a/requirements.txt
+++ b/requirements.txt
@@ -26,4 +26,5 @@ redis==5.0.1
 django-celery-beat==2.8.0
 django-environ==0.11.2
 djangorestframework==3.16.0
+django-filter==25.1
 psycopg2-binary==2.9.9
