--- a/requirements.txt
+++ b/requirements.txt
@@ -27,4 +27,5 @@ django-celery-beat==2.8.0
 django-environ==0.11.2
 djangorestframework==3.16.0
 django-filter==25.1
+djangorestframework-simplejwt==5.5.0
 psycopg2-binary==2.9.9
