--- a/requirements.txt
+++ b/requirements.txt
@@ -28,5 +28,5 @@ django-environ==0.11.2
 djangorestframework==3.16.0
 django-filter==25.1
 djangorestframework-simplejwt==5.5.0
-drf-yasg==1.21.10
+drf-spectacular==0.28.0
 psycopg2-binary==2.9.9
